[package]
name = "lightyear_demo"
edition = "2021"
version = "0.1.0"

[features]
metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
mock_time = ["lightyear/mock_time"]

[dependencies]
leafwing-input-manager = "0.13"
lightyear = { git = "https://github.com/cBournhonesque/lightyear.git", branch = "cb/interest-management-bug", features = [
  "webtransport",
  "websocket",
  "render",
  "leafwing"
] }
async-compat = "0.2.3"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = { version = "1.0.75", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
derive_more = { version = "0.99", features = ["add", "mul"] }
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
mock_instant = "0.3"
metrics-exporter-prometheus = { version = "0.13.0", optional = true }
bevy-inspector-egui = "0.23"
cfg-if = "1.0.0"
crossbeam-channel = "0.5.11"
